--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ before_install: gem install bundler -v 1.10.6
 before_script:
   - "bundle exec rake db:setup RAILS_ENV=test"
 
-script: bundle exec rspec spec -fd
+script: bundle exec rspec spec
